# bittensor-prometheus-proxy

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: build-image.yml  ci.yml
alloy/: config.alloy
app/bittensor_prometheus/: read_wallet_and_substitute_config.py
app/envs/prod/: Dockerfile  entrypoint.sh
app/src/: pytest.ini
app/src/project/: asgi.py  settings.py  urls.py
app/src/project/core/: contact.py  metrics.py  models.py  proxy_auth.py  proxy_outbound.py  tasks.py  views.py
app/src/project/core/contact/: __init__.py  subtensor.py  tempo.py
app/src/project/core/management/commands/: debug_add_validator.py
app/src/project/core/migrations/: 0001_initial.py  0002_validator_add_netuid.py
app/src/project/core/prometheus_protobuf/: gogo_pb2.py  remote_pb2.py  types_pb2.py
app/src/project/core/tests/: conftest.py  mock_contact.py  settings.py  test_proxy_auth.py  test_tasks.py  test_views.py
app/src/project/core/tests/integration/: conftest.py  test_prometheus.py  test_tempo_contact.py  test_traces.py
app/src/project/core/tests/views/: conftest.py  test_prometheus_inbound.py  test_prometheus_outbound.py  test_traces_inbound.py  test_traces_outbound.py
app/src/project/core/views/: prometheus.py  traces.py
docs/: build_plantuml.sh
envs/dev/: .env.template  docker-compose.yml  on-site-prometheus.yml
envs/prod/: .env.template  docker-compose.yml
tempo/: tempo.yml
